--- a/Questions.Rmd
+++ b/Questions.Rmd
@@ -23,6 +23,7 @@ Before anything else, install all the packages we will be using. You only need t
 #install.packages("knitr")
 #install.packages("dendextend")
 #install.packages("pls")
+#install.packages("adespatial")
 ```
 
 ### <span style="color:cornflowerblue">First we need to load the R packages we will be using and import the data.</span>
@@ -32,20 +33,15 @@ The "dune" dataset is included in the vegan package (an extensive collection of 
 ```{r message=FALSE, warning=FALSE}
 library(vegan)# Package for multivariate analyses of ecological data
 library(dplyr)# Package for data transformation
-
 #Lets's load the data, which is packaged as an RDS object
 load("MVM_data.RDS")
-
 #change names to match what is seen in Canoco based presentations 
 dune.env <- EnvVar
 dune <- Species
-
-
 #Management factor is character data but we need it to be numeric data for some analyses. 
 #For these, we can convert factors to "dummy" variables, that is zeros and ones.
 #For other analyses this conversion is done automatically in the background, so we can use the original data. 
 #Note:If you are converting a factor that is numeric already you need as.numeric(as.character(x))
-
 #We need to give each management method its own column
 dummy_management <- as.data.frame(model.matrix( ~ Management - 1, data=dune.env )) 
 #add these to the dataset
@@ -143,9 +139,7 @@ dune.dca
 #correspondence analysis and therefore proportions from total are unknown and undefined. 
 #DCA is not a method for decomposition of variation, and therefore
 #these proportions would not make sense either.
-
 plot(dune.dca)
-
 ```
 
 
@@ -157,24 +151,19 @@ plot(dune.dca)
  
 ### <span style="color:cornflowerblue">Question 6: Add one new species with cover degree 9 at the site with the lowest number of species. Do a new DCA-ordination.</span>
 
-#### <span style="color:forestgreen">What happens with the eigenvalues, total variation, and ordination diagram?</span>     
+#### <span style="color:forestgreen">What happens with the eigenvalues and ordination diagram?</span>     
 
 ```{r ex6, inclue=TRUE, warning=FALSE, message=FALSE}
-
 # calculate the number of species present in each plot
 rowSums(Species != 0)
-
 # find the plot with the lowest number of species
 which.min(rowSums(Species != 0))
-
 # create a new data frame with a new species with cover degree 9 at site 1
 NewSp <- c(9, rep(0,19))
 SpeciesNewSp <- data.frame(Species, NewSp)
-
 # run a new DCA with the extra species
 DCANewSp <- decorana(SpeciesNewSp)
 DCANewSp
-
 ```
 
 ```{r ex6plot, inclue=TRUE, warning=FALSE, message=FALSE}
@@ -186,10 +175,8 @@ ordiplot(DCANewSp, type="text", main="DCA with new sp.")
 You may be surprised that you haven't got any total inertia values when printing decorana results, 
 although in other software (e.g. CANOCO) these are available, together with percentage variance 
 explained by particular axes. The reason for this is that DCA does not support the concept of total 
-inertia values (also, it produces only four axes, i.e. four eigenvalues). See also the comment in the 
-code for the last question. However, you may get total inertia by applying correspondence 
-analysis (CA) on your data.
-
+inertia values (also, it produces only four axes, i.e. four eigenvalues). See the comment in the 
+code for the question 5.
                     
 
 <br>
@@ -201,10 +188,9 @@ analysis (CA) on your data.
 
 ### <span style="color:cornflowerblue">Question 7:  Repeat the ordination in exercise 6, but make the new species supplementary.</span>
 
-#### <span style="color:forestgreen"> Compare total variation, eigenvalues and ordination diagrams between exercises 5, 6 and 7! Explain the differences! What is the effect of making a species supplementary?</span>
+#### <span style="color:forestgreen"> Compare eigenvalues and ordination diagrams between exercises 5, 6 and 7! Explain the differences! What is the effect of making a species supplementary?</span>
 
 ```{r ex7, inclue=TRUE, warning=FALSE, message=FALSE}
-
 ```
 
 Skip this question as supplementary species are rarely used and this method is not available for DCA in R.
@@ -220,25 +206,19 @@ Skip this question as supplementary species are rarely used and this method is n
 
 ### <span style="color:cornflowerblue">Question 8:	Add one new sample to the data, with the existing species Chenopodium album "Che_alb" having a cover of 9. Make a new DCA-ordination. </span>
 
-#### <span style="color:forestgreen"> What happens with the eigenvalues, variation, and ordination diagram? Why did we choose to add Chenopodium album in the new sample? </span>
+#### <span style="color:forestgreen"> What happens with the eigenvalues and ordination diagram? Why did we choose to add Chenopodium album in the new sample? </span>
 
 ```{r ex8, inclue=TRUE, warning=FALSE, message=FALSE}
-
 # figure out the column number for Chenopodium album (abbreviated "Chenalbu")
 which(colnames(dune)=="Che_alb")
-
 # create a new data frame with a new sample containing Chenopodium album with a cover of 9
 NewSample <- c(rep(0,7), 9, rep(0,22))
 SpeciesNewSample <- data.frame(rbind(dune, NewSample))
-
 # run a new DCA with the extra sample
 DCANewSample <- decorana(SpeciesNewSample)
 DCANewSample
-
-
 # plot the DCA
 ordiplot(DCANewSample, type="text", main="DCA with new sample Chenopodium album")
-
 ```
 
 
@@ -252,22 +232,17 @@ ordiplot(DCANewSample, type="text", main="DCA with new sample Chenopodium album"
 ### <span style="color:cornflowerblue">Question 9:	Keep the new sample but delete the added Che_alb=9, and instead add Leo_aut = 5 to the new sample. Do a new DCA ordination!  </span>
 
 
-#### <span style="color:forestgreen"> What happens with the eigenvalues and variation? Look at the ordination diagram. Where is the extra sample located? </span>
+#### <span style="color:forestgreen"> What happens with the eigenvalues? Look at the ordination diagram. Where is the extra sample located? </span>
 
 ```{r ex9, inclue=TRUE, warning=FALSE, message=FALSE}
-
 # figure out the column number for Chenopodium album (abbreviated "Chenalbu")
 which(colnames(dune)=="Leo_aut")
-
 # create a new data frame with a new sample containing Chenopodium album with a cover of 9
 NewSample <- c(rep(0,15), 5, rep(0,10))
 SpeciesNewSample <- data.frame(rbind(dune, NewSample))
-
 # run a new DCA with the extra sample
 DCANewSample <- decorana(SpeciesNewSample)
 DCANewSample
-
-
 # plot the DCA
 ordiplot(DCANewSample, type="text", main="DCA with new sample Leontodon autumnalis")
 ```
@@ -281,19 +256,20 @@ ordiplot(DCANewSample, type="text", main="DCA with new sample Leontodon autumnal
 
 ### <span style="color:cornflowerblue">Question 10:	Downweighting of rare species. Do a new DCA on the original species data table, but with downweighting of rare species. </span>
 
-#### <span style="color:forestgreen"> What is the effect of downweighting? Compare eigenvalues, total variation and ordination diagrams from Exercise 5 and 10, and explain the differences! </span>
+#### <span style="color:forestgreen"> What is the effect of downweighting? Compare eigenvalues and ordination diagrams from Exercise 5 and 10, and explain the differences! </span>
 
 ```{r ex10, inclue=TRUE, message=FALSE, warning=FALSE}
-
 # DCA on original data set but with argument iweigh	(0: no)
 DCADownweight <- decorana(dune, iweigh=1)
 DCADownweight
 
+## original DCA
+dune.dca
 
-# plot the DCA
+# plot the DCAs
 ordiplot(DCADownweight, type="text", main="DCA with downweighted rare species")
 
-
+ordiplot(dune.dca, type="text", main="DCA original")
 ```
 
 <br>
@@ -307,14 +283,17 @@ ordiplot(DCADownweight, type="text", main="DCA with downweighted rare species")
 #### <span style="color:forestgreen"> Compare the NMDS ordination with the ordinations obtained using CA and DCA! What is the stress value for the NMDS? </span>
 
 ```{r ex11, inclue=TRUE, warning=FALSE, message=FALSE}
-
 # NMDS on original data set with 2 reduced dimensions
 NMDS <- metaMDS(dune, k=2)
 NMDS
-
-
 # plot the NMDS
 ordiplot(NMDS, type="text", main="NMDS")
+
+#plot the CA
+ordiplot(dune.ca, type="text", main="DCA")
+
+#plot the DCA
+ordiplot(dune.dca, type="text", main="DCA")
 
 ```
 
@@ -333,28 +312,23 @@ These are two ways of comparing ordinations or the structure in related multivar
 
 ```{r ex12, inclue=TRUE, warning=FALSE, message=FALSE}
 library(cocorresp)
-
 # DCA on the plant species data 
 DCASpecies <- decorana(dune)
-
 # DCA on the insect data (called Bugs)
 DCABugs <- decorana(Bugs)
 DCABugs
-
 # procrustes analysis on the two DCAs from different datasets
 ProC <- procrustes(DCASpecies, DCABugs)
 
 plot(ProC, kind=1, type="text")
-
 # Labels show the position of the samples in the second ordination, and arrows point to their positions in the target ordination
-
 # Function protest tests the non-randomness (`significance') between two configurations
 ProCsig <- protest(dune.dca, DCABugs)
 ProCsig
-
 # Co-correspondence analysis
 CoCor <- coca(dune ~ ., data = Bugs, method = "symmetric")
-CoCor
+summary(CoCor)
+corAxis(CoCor)
 ```
 
 
@@ -368,17 +342,20 @@ CoCor
 
 ### <span style="color:cornflowerblue">Question 13:	Do an RDA and a CCA on the Dune Meadow data set, using the full set of environmental variables.  </span>
 
-#### <span style="color:forestgreen"> Compare the ordination diagrams and numerical results! What does the significance test tell you? When only looking at the results, which method explains the variation best? Taking the nature of the data into account, which method should be used? What is meant explained variation and adjusted explained variation? </span>
+#### <span style="color:forestgreen"> Compare the ordination diagrams and numerical results! What does the significance test tell you? When only looking at the results, which method explains the variation best? Taking the nature of the data into account, which method should be used?  </span>
 
 ```{r ex13, inclue=TRUE, warning=FALSE, message=FALSE}
-
 # RDA 
 dune.rda <- rda(dune ~ . , dune.env.original)
-dune.rda
+summary(dune.rda)
+anova(dune.rda)
+
 # CCA 
 dune.cca <- cca(dune ~ . , dune.env.original)
-dune.cca
+summary(dune.cca)
+anova(dune.cca)
 
+#plots
 ordiplot(dune.rda, type="text", main="RDA")
 ordiplot(dune.cca, type="text", main="CCA")
 ```
@@ -391,15 +368,13 @@ ordiplot(dune.cca, type="text", main="CCA")
 
 ### <span style="color:cornflowerblue">Question 14:	Use the results from the CCA ordination in exercise 13 to look at and interpret the variance inflation factor, and to look for warnings about outliers in the explanatory data!   </span>
 
-#### <span style="color:forestgreen"> Look at and interpret the inflation factors for each environmental variable! Are there any warning for extreme values? </span>
+#### <span style="color:forestgreen"> Look at and interpret the inflation factors for each environmental variable! Are there any extreme values? </span>
 
 ```{r ex14, inclue=TRUE, warning=FALSE, message=FALSE}
-
 # VIF for CCA 
 dune.cca <- cca(dune ~ . , dune.env)
 vif.cca <- vif.cca(dune.cca)
 vif.cca
-
 ```
 Function vif.cca gives the variance inflation factors for each constraint or contrast in factor constraints. In partial ordination, conditioning variables are analysed together with constraints. Variance inflation is a diagnostic tool to identify useless constraints. A common rule is that values over 10 indicate redundant constraints. 
 
@@ -415,14 +390,15 @@ Function vif.cca gives the variance inflation factors for each constraint or con
 
 
 ```{r ex15, inclue=TRUE, warning=FALSE, message=FALSE}
-
 # CA with env. variables 
 fit <- envfit(dune.ca, dune.env, perm=999)
-
+fit
 ordiplot(dune.ca,  type="text", main="CA with env. variables fitted after")
 plot(fit)
 
+#CCA 
 dune.cca <- cca(dune ~ . , dune.env.original)
+dune.cca
 ordiplot(dune.cca, type="text", main="CA")
 ```
 
@@ -432,27 +408,23 @@ ordiplot(dune.cca, type="text", main="CA")
 
 <br>
 
-### <span style="color:cornflowerblue">Question 16:	Next, you should investigate whether the four different management regimes (SF standard farming, BF biodynamical farming, HF hobby farming, and NM nature management) have any effect on the species distribution. This is done by using these four management types as environmental variables in a constrained ordination.  </span>
+### <span style="color:cornflowerblue"> Question 16:	Next, you should investigate whether the four different management regimes (SF standard farming, BF biodynamical farming, HF hobby farming, and NM nature management) have any effect on the species distribution. This is done by using these four management types as environmental variables in a constrained ordination.  </span>
 
-#### <span style="color:forestgreen"> Inspect and interpret the results of the permutations and all graphs! Compare with the CCA on the full set of explanatory data in exercise 13. </span>
+#### <span style="color:forestgreen"> Inspect and interpret the results of the permutations and graph! Compare with the CCA on the full set of explanatory data in exercise 13. </span>
 
 To investigate if the vegetational pattern is an effect of management, or if the pattern is random, Monte Carlo permutations will be used. 
 
 
 ```{r ex16, inclue=TRUE, warning=FALSE, message=FALSE}
-
 # CCA using only Management as the environmental variable
 dune.ccaMN <- cca(dune ~ Management , dune.env.original)
-
+summary(dune.ccaMN)
 # Permutation test on CCA
 MCperm <- permutest(dune.ccaMN, permutations=999)
 MCperm
-
 # Plot the ordination with only Management
 ordiplot(dune.ccaMN, type = "points", main = "CCA only Management")
 ordihull(dune.ccaMN,groups = dune.env.original$Management,draw = "polygon",col = "grey70", label = T)
-
-
 ```
 
 <br>
@@ -467,16 +439,13 @@ ordihull(dune.ccaMN,groups = dune.env.original$Management,draw = "polygon",col =
 #### <span style="color:forestgreen"> Explain the results of the permutations! Compare the results in exercises 16 and 17! </span>
 
 ```{r ex17, inclue=TRUE, warning=FALSE, message=FALSE}
-
 # CCA using A1 and moisture as the environmental variable
 dune.ccaA1ms <- cca(dune, dune.env[,1:2])
-
+summary(dune.ccaA1ms)
 # Permutation test on CCA
 MCpermA1ms <- permutest(dune.ccaA1ms, permutations=999)
 MCpermA1ms 
-
 # Plot the ordination
-
 ordiplot(dune.ccaA1ms, type="text", main="CCA A1 and moisture")
 
 ```
@@ -498,18 +467,14 @@ This is done by a partial CCA ordination. Partial ordinations are used to elimin
 #### <span style="color:forestgreen">What does the permutation test tell you? Also, compare the results with the results from the permutation test on only management types!  </span>
 
 ```{r ex18, inclue=TRUE, warning=FALSE, message=FALSE}
-
 #This partials out the effect of A1 and Moisture before analysing the effects of management
 MN.cca <- cca(dune ~ Management + Condition(A1 + Moisture), data=dune.env.original)
-
+summary(MN.cca)
 #permutation test
 permutest(MN.cca, permutations=999)
-
 # Plot the ordination
 ordiplot(MN.cca, type = "points")
 ordihull(MN.cca,groups = dune.env.original$Management,draw = "polygon",col = "grey70", label = T)
-
-
 ```
 
 <br>
@@ -524,14 +489,11 @@ ordihull(MN.cca,groups = dune.env.original$Management,draw = "polygon",col = "gr
 #### <span style="color:forestgreen"> Inspect and interpret the results of the permutations! </span>
 
 ```{r ex19, inclue=TRUE, warning=FALSE, message=FALSE}
-
 #This partials out the effect of A1, Moisture, and Manure before analysing the effects of management
 MN.cca2 <- cca(dune ~ Management + Condition(A1 + Moisture + Manure), data=dune.env.original)
-
+summary(MN.cca2)
 #permutation test
 permutest(MN.cca2, permutations=999)
-
-
 ```
 
 <br>
@@ -542,20 +504,20 @@ permutest(MN.cca2, permutations=999)
 
 ### <span style="color:cornflowerblue"> Question 20: Forward selection </span>
 
-#### <span style="color:forestgreen"> We have now concluded that management type is of subordinate importance. Now, you want to test the importance or significance of individual environmental variables. This is done by Forward selection. What is the effect of Forward selection? In what way do these results differ from the results obtained when the whole Environmental data table was used as explanatory variables? Were the set of explanatory variables selected by the Forward selection the best set? What is the effect of P value correction, and why is it performed?  </span>
+#### <span style="color:forestgreen"> We have now concluded that management type is of subordinate importance. Now, you want to test the importance or significance of individual environmental variables. This is done by Forward selection. What is the effect of Forward selection? In what way do these results differ from the results obtained when the whole Environmental data table was used as explanatory variables? Were the set of explanatory variables selected by the Forward selection the best set? Why would one perform a p-value correction?  </span>
 
 ```{r ex20, inclue=TRUE, warning=FALSE, message=FALSE}
+library(adespatial)
+FS2 <- forward.sel(dune, dune.env)
+FS2
 
-mod0 <- cca(dune ~ 1, dune.env)  # Model with intercept only
-mod1 <- cca(dune ~ ., dune.env)  # Model with all explanatory variables
+# Since there is (a potentially high) number of tests of significance during the forward selection procedure, 
+# it is better to apply a correction for multiple testing issue. Here we apply the Holm correction.
 
-## With scope present
-FS <- ordistep(mod0, scope = formula(mod1), direction="forward")
-FS$anova
-
-## Holm correction on the p-values
-
-#pval.adj <- p.adjust(FS$pval, method = 'holm', n = n.tests)
+n.tests <- ncol (dune.env)  # number of tests equals # of variables which are being selected
+pval.adj <- p.adjust (FS2$pval, method = 'holm', n = n.tests)
+FS2$pval.adj <- pval.adj
+FS2
 
 ```
 
@@ -571,51 +533,43 @@ FS$anova
 
 ```{r, warning=FALSE, message=FALSE}
 #rename data with Ellenberg values to match Canoco based presentations
-
 dune.ell <- Ellenberg
 dune.mean.ell <- Mean_Ellenberg
-
 #The vegan implementation of forward selection of variables does not accept NA values.
 #To get around this we will replace the two NAs with the mean value for all plots in that column.
 #Do not do this in a real analysis without seriously thinking about how it affects your results!
 #This also means that the ordinations you produce may look slightly different to those produced in Canoco, 
 #but the overall patterns and significance of results will be the same.
-
-
 ## Code to replace missing values with the column mean, and save the results as a new dataframe
 ## called dune.mean.ell.impute (since we are imputing the missing values).
-
 dune.mean.ell.impute <- data.frame(
     sapply(
         dune.mean.ell,
         function(x) ifelse(is.na(x),
             mean(x, na.rm = TRUE),
             x)))
-
-
 #CCA analysis
 #create global model with CCA (including all variables) and test it's significance, and if it is significant,
 #we use the ordistep function with appropriate arguments to do forward selection of variables.
 cca1 <- cca(dune ~ ., data = dune.mean.ell.impute) # full model (with all explanatory variables)
 anova(cca1) #overall model is significant
-
 # Start by making ordinations
 cca0 <- cca (dune~ 1, data = dune.mean.ell.impute) # empty model only with intercept
 cca1 <- cca(dune ~ ., data = dune.mean.ell.impute, na.action = na.omit) # full model (with all explanatory variables)
 cca1
 plot(cca1, main="CCA, all data")
-
 #Stepwise approach, using "ordistep"
 step2<-ordistep(cca0, scope = formula(cca1), direction="forward")
 step2$anova # which three are most significant in the final selection?
-
-
 ```
 
 #### 
 
+<br>
 
+***
 
+<br>
 
 
 
@@ -637,19 +591,19 @@ The total variation in the dataset is the sum of all unconstrained eigenvalues.
 
 ```{r, warning=FALSE, message=FALSE}
 ## variance partitioning
-
 management <- dune.env[,c("BF", "HF", "NM", "SF")]
 soil <- dune.env[,c("A1", "Moisture")]
 # examine the explanatory variable of each class of variables.
 varp <- varpart(dune, management, soil)
-
-
 varp
 plot (varp, digits = 2, Xnames = c('Management', 'Soil'), bg = c('red', 'blue'))
-
 ```
 
+<br>
 
+***
+
+<br>
 
 ### <span style="color:cornflowerblue">Question 23: Diagnostic species for a priori defined groups </span>
 
@@ -664,15 +618,17 @@ In this exercise we will investigate if any particular species are indicative fo
 ```{r, warning=FALSE, message=FALSE}
 library(labdsv)
 library(tibble)
-
 iva <- indval(dune, dune.env.original$Management) #this time we don't need dummy variables for management
-
 iva.df <- as.data.frame(iva$indval)
 #arrange in descending order to find best indicator species, change BF to other management types as needed
 arrange(rownames_to_column(iva.df), desc(HF))
-
 ```
 
+<br>
+
+***
+
+<br>
 
 ### <span style="color:cornflowerblue">Question 24: Analysing a time series with vegetation data </span>
 
@@ -682,20 +638,13 @@ Quite often vegetation ecologists have data from repeated inventories in permane
 
 ```{r, warning=FALSE, message=FALSE}
 #This partials out the effect of Plot before analysing the effects of Time
-
 time.cca <- cca(SpeTS ~ Time + Condition(Plot), data=EnvTS)
 time.cca
-
-
 treat <- EnvTS$Time #
-
 colvec <- c("red2", "green4") #set colours to be applied to different levels of factor "Time"
-
 plot(time.cca, type = "n", display = c("lc"))#plots the axes
-
 with(time.cca, points(time.cca, display = c("lc"), col = colvec[treat],#plots the points
                       pch = 21, xlim = c(-2,2), bg = colvec[treat]))
-
 ```
 
 ```{r}
@@ -710,21 +659,23 @@ time2.cca <- cca(SpeTS ~ Time, data=EnvTS)
 time2.cca
 #permutation test
 with(EnvTS, anova(time2.cca, by="term", perm=500))
-
 ```
 
 
 ```{r, warning=FALSE, message=FALSE}
 ## plot ellipsoid hulls
-
 treat <- EnvTS$Time
-
 plot(time2.cca, type = "n")#plots the axes
 with(time2.cca, points(time2.cca, col = colvec[treat],#plots the points
                       pch = 21, bg = colvec[treat]))
 ordihull(time2.cca,groups=treat,draw="polygon",col="grey70",label=T)#draw hulls around area of each level of factor "Time"
 ```
 
+<br>
+
+***
+
+<br>
 
 ### <span style="color:cornflowerblue">Question 25: A multivariate Before-After-Control- Impact (BACI) study </span>
 
@@ -742,9 +693,7 @@ The question you want to answer is if the treatment caused a change in species c
 
 
 ```{r, warning=FALSE, message=FALSE}
-
 baci.cca <- cca(SpeTS ~ Treat + Condition(Plot + Time), data=EnvTS)
-
 baci.cca
 ```
 
@@ -762,18 +711,17 @@ with(EnvTS, anova(baci.cca, by="term", perm=500, strata=Treat))
 
 ```{r, warning=FALSE, message=FALSE}
 ## plot results
-
 treat <- EnvTS$Treat
 ordiplot(baci.cca,type="points")
 ordihull(baci.cca,groups=treat,draw="polygon",col="grey70",label=T)#draw hulls around area of each level of factor "Time"
-
 ```
 
 
+<br>
 
+***
 
-
-
+<br>
 
 
 
@@ -782,50 +730,47 @@ ordihull(baci.cca,groups=treat,draw="polygon",col="grey70",label=T)#draw hulls a
 #### <span style="color:forestgreen"> How do the different clustering techniques differ? </span>
 
 
-Start by testing the non-hierarchical K-means clustering, using Multivar / K-Means. Note that it is recommended that K-means need at least 100 observations (500 according to some sources) to be reliable! Let us ignore the sample size issue for the moment, and ask for 4 clusters (for later comparison with the four management types). Test different hierarchical agglomeration algorithms and similarity indices. Use at least the Euclidian and the Bray-Curtis similarity measures for the hierarchical clustering technique. Try also the Ward’s method! 
+Start by testing the non-hierarchical K-means clustering, using Multivar / K-Means. Note that it is recommended that K-means need at least 100 observations (500 according to some sources) to be reliable! Let us ignore the sample size issue for the moment, and ask for 4 clusters (for later comparison with the four management types). Test different hierarchical agglomeration algorithms and similarity indices. Use at least the Euclidian and the Bray-Curtis similarity measures for the hierarchical clustering technique. Try also the Ward's method! 
 
 ```{r, warning=FALSE, message=FALSE}
 library(dendextend)
 #make a distance matrix using the Bray-Curtis method
 dune.dist <- vegdist(dune, method = "bray")
-
 # K-Means Cluster Analysis
 fit <- kmeans(dune, 4, nstart = 50) # we specify a 4 cluster solution
 #As the final result of k-means clustering result is sensitive to the random starting assignments, we specify nstart = 50. This means #that R will try 50 different random starting assignments and then select the best results corresponding to the one with the lowest #within cluster variation.
-
 #Note that k-means clustering involves randomness so you won't neccessarily get exactly the same results if you repeat it.
 #There are also several different algorithms that can be used in k-means clustering, and different software 
 #have can use different defaults.Check out the help file for the kmeans function if you want to know more about these.
-
 #cluster number for each data point
 fit$cluster
 #cluster sizes
 fit$size
-
 #compare clusters to management category
 table(fit$cluster, dune.env.original$Management)
-
 #try some approaches to hierarchical clustering
 dend2 <- dune %>% # data
         dist(method = "euclidean") %>% # calculate a distance matrix, choose method 
         hclust(method = "ward.D") %>% # Hierarchical clustering, choose method 
         as.dendrogram # Turn the object into a dendrogram.
 dend2 %>% set("labels_color") %>% set("branches_lwd") %>%  set("branches_k_color", k = 4) %>% plot
-
 #the dist() function does not include Bray-Curtis but we have already made a distance matrix using 
 #the vegdist() function from vegan.
 dend3 <- dune.dist %>% # data (Bray-Curtis)
         hclust(method = "aver") %>% # Hierarchical clustering, choose method 
         as.dendrogram # Turn the object into a dendrogram.
 dend3 %>% set("labels_color") %>% set("branches_lwd") %>%  set("branches_k_color", k = 4) %>% plot
-
 #we can colour the labels based on their grouping in the kmeans analysis to compare clusters
 dend3 %>% set("labels_color", fit$cluster) %>% set("branches_lwd") %>%  set("branches_k_color", k = 4) %>% plot
-
 #tanglegram is a nice function to compare dendrograms that you might want to try out as an extra
 tanglegram(dend2, dend3)
 ```
 
+<br>
+
+***
+
+<br>
 
 ### <span style="color:cornflowerblue">Question 27: ANOSIM </span>
 
@@ -837,12 +782,10 @@ ANOSIM (ANalysis Of Similarities) is a non-parametric test of significant differ
 
 ```{r, warning=FALSE, message=FALSE}
 dune.dist <- vegdist(dune, method = "bray") #create distance matrix based on Bray-Curtis method
-
 dune.ano <- anosim(dune.dist, fit$cluster) #compare groupings based on cluster analysis
 summary(dune.ano)
 #plot(dune.ano)
 #title(sub = "Anosim, groups = cluster analysis")
-
 #ANOSIM gives you the P value and a R value. R value close to 1 indicates high separation between levels of your factor while R value #close to 0 indicate no separation between levels of your factor.
 ```
 
@@ -852,13 +795,20 @@ summary(dune.ano2)
 #plot(dune.ano2, sub = "Anosim, groups = management")
 ```
 
+
+<br>
+
+***
+
+<br>
+
+
 ### <span style="color:cornflowerblue">Question 28: SIMPER </span>
 
 #### <span style="color:forestgreen"> Compare the different groups and check which species that contributes mostly to the difference between pairs of clusters.  </span>
 
 After a significant ANOSIM, you may want to know which species are primarily responsible for the observed difference between clusters. SIMPER (Similarity Percentage) will do this for you. The test does not come with significance testing. In the output tables, taxa are sorted in descending order of contribution to group difference. 
 ```{r, warning=FALSE, message=FALSE}
-
 sim <- simper(dune, fit$cluster) #start with kmeans clusters
 summary(sim)
 ```
@@ -867,6 +817,12 @@ sim2 <- simper(dune, dune.env.original$Management) #try management groupings
 summary(sim2)
 ```
 
+
+<br>
+
+***
+
+<br>
 
 ### <span style="color:cornflowerblue">Question 29: PLS </span>
 
@@ -877,15 +833,11 @@ Unless you are already familiar with PLS in R we suggest that you follow the exe
 ```{r, warning=FALSE, message=FALSE}
 data.pls <- Trend_Lakes_2015_PLS
 #View(data.pls)
-
 library(pls)
 #PLS regression, like PCA, seeks to find components which maximize the variability of predictors but differs from PCA as PLS requires #the components to have maximum correlation with the response.
-
 #Change 'Antal arter' (number of species in Swedish) to your choice of response variable(s)
 pls.fit <- plsr(`Antal arter` ~ ., data = data.pls[c(9:35)], scale = TRUE, validation = "CV")
-
 #The predictor variables are mapped to a smaller set of variables, and within that smaller space we perform a regression against the #outcome variable. PLS aims to choose new mapped variables that maximally explain the outcome variable.
-
 #The next step is to remove unwanted variables and then build a model.  
 #Cross validation is used to find the optimal number of retained dimensions.
 #Then the model is rebuilt with this optimal number of dimensions. 
@@ -893,21 +845,16 @@ pls.fit <- plsr(`Antal arter` ~ ., data = data.pls[c(9:35)], scale = TRUE, valid
 cv <- RMSEP(pls.fit)
 best.dims <- which.min(cv$val[estimate = "adjCV", , ]) - 1
 best.dims 
-
 # Rerun the model
 pls.fit2 <-  plsr(`Antal arter` ~ ., data = data.pls[c(6:35)], ncomp = best.dims)
-
 #Finally, we extract the useful information and format the output.
 coefficients <-  coef(pls.fit2)
 sum.coef <-  sum(sapply(coefficients, abs))
 coefficients <-  coefficients * 100 / sum.coef
 coefficients <-  sort(coefficients[, 1 , 1])
 barplot(tail(coefficients, 5))
-
 #The regression coefficients are normalized so their absolute sum is 100 and the result is sorted.
-
 #The results below show that 'Tot-N_TNb' and 'Mn' are the two most importnat positive predictors of 'Antal arter'.  You could run the code #barplot(head(coefficients, 5)) to see that at the other end of the scale for negative predictors.
-
 summary(pls.fit2)
 plot(pls.fit)
 validationplot(pls.fit2, val.type = "MSEP")
