--- a/Questions_working.Rmd
+++ b/Questions_working.Rmd
@@ -11,6 +11,24 @@ knitr::opts_chunk$set(echo = TRUE)
 library(vegan)
 ```
 
+
+```{r echo=TRUE, message=FALSE, warning=FALSE}
+###install required packages### 
+#delete hash symbol on the following lines and run (only needs to be done first time, not every time you run the code afterwards!)
+#install.packages("vegan")
+#install.packages("dplyr")
+#install.packages("corrplot")
+#install.packages("cocorresp")
+#install.packages("tibble")
+#install.packages("labdsv")
+#install.packages("knitr")
+#install.packages("dendextend")
+#install.packages("pls")
+#install.packages("adespatial")
+```
+
+
+
 ### <span style="color:cornflowerblue">Exercise 1. Introduction to R Notebooks and Markdown.</span>
 
 This exercise is only to get used to working with R Notebook and R Markdown. The data in this first are not multivariate and the statistical analysis is a simple linear regression. All following exercises will start with this kind of introduction.
@@ -18,7 +36,8 @@ This exercise is only to get used to working with R Notebook and R Markdown. The
 ### <span style="color:forestgreen"> For each exercise there will be a number of explicit questions written in green. </span>
 To pass the course, you should give your answers to these questions to one of the teachers during the computer labs. 
 
-#### <span style="color:Red">Write your answers to the questions and any other comments in the Answers.Rmd file </span>
+#### <span style="color:Red">Write your answers to the questions and any other comments here below. </span>
+Replace this text in for each question with your answers and comments...
 
 ---
 
@@ -339,75 +358,15 @@ ordiplot(dune.dca, type="text", main="DCA")
 
 ##Q10
 
-###<span style="color:cornflowerblue">Question 10: Data Quality Assessment</span>
-These are only a few examples on how to assess data quality. 
+### <span style="color:cornflowerblue">Question 10:	Data quality assessment </span>
 
-#### <span style="color:forestgreen">Is there a pattern in the distribution of missing values that may lead to the omission of a species or a sample? Is Grubbs test a good method for finding outliers in a multivariate data set? Would you say that the original Dune Meadow data set is OK for further analyses? Motivate your answer!</span>
-
-
+#### <span style="color:forestgreen"> data quality </span>
 
 ```{r ex10, inclue=TRUE, message=FALSE, warning=FALSE}
-library("vegan") 
-library("reshape2")
-library("outliers") # For Grubbs test
-library("gdata") # for unmatrix
-library("VIM") # For matrixplot
-
-data(dune)
-
-# Create some outliers and missing values in a temporary dataset called mvo.dune (acronym for MultiVariate Outlier)
-mvo.dune<-as.matrix(dune)
-n_outl<- 5 # Give number of outliers to be created, here 5
-v_outl<-30 # Give value of the outlier(s), here 30
-mvo.dune[sample(1:length(mvo.dune),n_outl, replace = FALSE)]<-v_outl # Replace some data with outliers, at random positions
-mvo.dune[sample(1:length(mvo.dune),n_outl, replace = FALSE)]<-NA # Replace some data with NAs, at random positions
-
-# Cleveland plot to inspect data
-dotchart(as.matrix(mvo.dune), lcolor=col(mvo.dune), main="Cleveland plot", xlab="Observerd value")
-
-# Find data > 9, as no value should be higher than 9 in the dune meadow data set
-(GT9 <- which(mvo.dune > 9, arr.ind=TRUE))
-
-# Find missing values
-(mvo_miss<-which(is.na(mvo.dune), arr.ind=TRUE))
-
-# Two ways of visualising missing data, using the package "VIM"
-aggr(as.matrix(mvo.dune)) 
-matrixplot(mvo.dune) 
+# To follow, Ulf
 ```
+
 <br>
-We can also try testing for outliers in the data. Be aware that this is only indicative, and you still need to exercise your judgement about what should be excluded as an outlier!
-
-```{r}
-# To scan all variables with Grubbs test for outliers
-# Note: Only indicative!
-mvo.dune_melt<-melt(mvo.dune) # Restructure data
-a<-as.data.frame(do.call("rbind", with(mvo.dune_melt, tapply(value, Var1, function(x) 
-  unlist(grubbs.test(x)[c("statistic", "p.value", "alternative")])))))
-(a[which(a$p.value < 0.05),])
-
-# Indicative search for outliers in a multivariate data set. 
-# Multiple peaks and high SD indicate outliers may occur
-dist1<-vegdist(mvo.dune, method="euclidean", binary=FALSE, diag=FALSE, upper=FALSE, na.rm = TRUE) 
-d1<-data.frame(unmatrix(as.matrix(dist1), byrow = TRUE))
-d1r<-t(data.frame(strsplit(row.names(d1), ":")))
-d1rr<-data.frame(d1,d1r)
-d1mean<-tapply(d1rr$unmatrix.as.matrix.dist1.., d1rr$X1, mean)
-sd(d1mean) # Standard deviation of the mean distances. If > 3: strong outlier(s)
-plot(density(d1mean), col = "red", xlab="Distance between observations", main = "Indictive test of multivariate outliers\nData with noise")
-legend("topright",paste("SD =",round(sd(d1mean),1))) # Legend with standard deviation
-
-# Same as above but on the original dune meadow dataset (i.e. without outliers)
-dist1<-vegdist(dune, method="euclidean", binary=FALSE, diag=FALSE, upper=FALSE, na.rm = TRUE) 
-d1<-data.frame(unmatrix(as.matrix(dist1), byrow = TRUE))
-d1r<-t(data.frame(strsplit(row.names(d1), ":")))
-d1rr<-data.frame(d1,d1r)
-d1mean<-tapply(d1rr$unmatrix.as.matrix.dist1.., d1rr$X1, mean)
-sd(d1mean) # Standard deviation of the mean distances. If > 3: strong outlier(s)
-plot(density(d1mean), col = "red", xlab="Distance between observations",main = "Indictive test of multivariate outliers\nOriginal Dune Meadow data")
-legend("topright",paste("SD =",round(sd(d1mean),1))) # Legend with standard deviation
-
-```
 
 ***
 
