--- a/Questions.Rmd
+++ b/Questions.Rmd
@@ -1140,8 +1140,11 @@ PLS regression, like PCA, seeks to find components which maximize the variabilit
 data.pls <- readRDS("Trend_Lakes_2015_PLS.RDS")
 #View(data.pls)
 library(pls)
-#Change Species_count to your choice of response variable(s)
-pls.fit <- plsr(Species_count ~ ., data = data.pls[c(9:35)], scale = TRUE, validation = "CV")
+#This function takes the same form as a lot of regression models in R:
+#plsr(Response variable ~ Explanatory Variables, data = yourdata, scale = TRUE/FALSE)
+
+pls.fit <- plsr(Species_count ~ ., data = data.pls[c(9:34)], scale = TRUE,
+                na.action = na.omit, validation = "CV")
 
 #The next step is to remove unwanted variables and then build a model.  
 #Cross validation is used to find the optimal number of retained dimensions.
@@ -1151,20 +1154,47 @@ cv <- RMSEP(pls.fit)
 best.dims <- which.min(cv$val[estimate = "adjCV", , ]) - 1
 best.dims 
 # Rerun the model
-pls.fit2 <-  plsr(Species_count ~ ., data = data.pls[c(6:35)], ncomp = best.dims)
+pls.fit2 <-  plsr(Species_count ~ ., data = data.pls[c(6:34)], ncomp = best.dims)
 #Finally, we extract the useful information and format the output.
 coefficients <-  coef(pls.fit2)
 sum.coef <-  sum(sapply(coefficients, abs))
 coefficients <-  coefficients * 100 / sum.coef
 coefficients <-  sort(coefficients[, 1 , 1])
-barplot(tail(coefficients, 5))
+barplot(tail(coefficients, 3))
 #The regression coefficients are normalized so their absolute sum is 100 and the result is #sorted.
 #The results below show that 'Total_N' and 'Mn' are the two most important positive #predictors of 'Species_count'.  You could run the following to see the other end of the scale for negative predictors.
-barplot(head(coefficients, 5))
+barplot(head(coefficients, 3))
 #Here we see that "Fe", iron is the most important negative predictor.
 summary(pls.fit2)
-plot(pls.fit)
 coefplot(pls.fit2)
 
+```
 
+We can try a different reponse variable, Biovolume, and also look at the scores and loadings. 
+```{r}
+pls.fit.b <- plsr(Biovolume ~ ., data = data.pls[c(9:34)], scale = TRUE,
+                na.action = na.omit, validation = "CV")
+
+#Find the number of dimensions with lowest cross validation error
+cv <- RMSEP(pls.fit.b)
+best.dims <- which.min(cv$val[estimate = "adjCV", , ]) - 1
+best.dims 
+# Rerun the model
+pls.fit.b2 <-  plsr(Biovolume ~ ., data = data.pls[c(6:34)], ncomp = best.dims)
+#Finally, we extract the useful information and format the output.
+coefficients <-  coef(pls.fit.b2)
+sum.coef <-  sum(sapply(coefficients, abs))
+coefficients <-  coefficients * 100 / sum.coef
+coefficients <-  sort(coefficients[, 1 , 1])
+barplot(tail(coefficients, 3))
+barplot(head(coefficients, 3))
+
+#The loading plot is often used for interpretation purposes, for instance to look for known #spectral peaks or profiles:
+plot(pls.fit.b2, "loadings", comps = 1:2, legendpos = "topleft", xlab = "nm")
+abline(h = 0)
+
+#This gives a pairwise plot of the score values for the three first components.
+#Score plots are often used to look for patterns, groups or outliers in the data. 
+plot(pls.fit.b2, plottype = "scores", comps = 1:3)
+plot(pls.fit.b2, ncomp = 2, asp = 1, line = TRUE)
 ```
